[package]
name = "esp32"
version = "0.1.0"
authors = ["Albert24GG"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp32"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.49", features = [
    "critical-section",
    "embassy-time-driver",
    "embassy-sync",
] }
esp-idf-hal = "0.44.1"
anyhow = "1.0.94"
esp-idf-sys = "0.35.0"
ssd1306 = "0.9.0"
embedded-graphics = "0.8.1"
loadcell = "0.2.0"
button-driver = { version = "0.2.2", features = ["esp"] }

[build-dependencies]
embuild = "0.32.0"
cc = "=1.1.30"     # Version "1.1.30" necessary until a new version of `esp-idf-sys` is released
